# carbon-footprint-awareness-platform

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
backend/: pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  deps.py  main.py  models.py  rate_limit.py
backend/app/carbon/: __init__.py  calculator.py  factors.py
backend/app/insights/: __init__.py  gemini.py  rules.py
backend/app/insights/prompts/: v1.yaml
backend/app/models/: __init__.py  schemas.py
backend/app/repository/: __init__.py  base.py  firestore_repo.py  memory_repo.py
backend/app/routes/: calculate.py  entries.py  health.py
backend/tests/: conftest.py  test_api.py  test_calculator.py  test_config.py  test_deps.py  test_firestore_repo.py  test_gemini.py  test_memory_repo.py  test_models.py  test_prompt_config.py  test_rate_limit.py  test_rules.py  test_spa.py
docs/: ARCHITECTURE.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: calculator.spec.ts
frontend/scripts/: sync-types.sh
frontend/src/: App.test.tsx  App.tsx  main.tsx
frontend/src/components/: CalculatorForm.test.tsx  CalculatorForm.tsx  HistoryPanel.test.tsx  HistoryPanel.tsx  InsightsPanel.test.tsx  InsightsPanel.tsx  NumberField.test.tsx  NumberField.tsx  ResultBreakdown.test.tsx  ResultBreakdown.tsx
frontend/src/hooks/: useFootprint.test.tsx  useFootprint.ts
frontend/src/lib/: api.test.ts  api.ts  deviceId.test.ts  deviceId.ts  format.test.ts  types.ts  (+1 more)
(+3 files in other folders)
